--- a/assets/index.html
+++ b/assets/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" hred="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -12,15 +13,20 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <section class=" "card" id=""html-section">
+      <section class=" "card" id="html-section">
 
       </section>
 
       <section class=" "card" id="css-section">
+        <ul>
+          <li>A margin indicates how much space we want around the outside of an element.
+          </li>
+          <li> A padding indicates how much space we want around the content inside an element</li>
+        </ul>
 
       </section>
 
-      <section class="card" id=""git-section">
+      <section class="card" id="git-section">
 
       </section>
 
