--- a/index.html
+++ b/index.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" hred="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
-      <section class=" "card" id="html-section">
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>HTML is the structure of the website</li>
+          <li>The head element contains information about the webpage</li>
+          <li>The body element represents the visible content shown to the user.</li>
+        </ul>
 
       </section>
 
-      <section class=" "card" id="css-section">
+      <section class="card" id="css-section">
+        <h3>CSS</h3>
         <ul>
           <li>A margin indicates how much space we want around the outside of an element.
           </li>
@@ -27,10 +35,19 @@
       </section>
 
       <section class="card" id="git-section">
+        <h4>Git-Section</h4>
+        <ul>
+          <li> git status: checks what branch we are currently on</li>
+          <li> -b branch-name: creates a new branch and switches to it</li>
+        </ul>
 
       </section>
 
       <section class="card" id="javascript-section">
+        <h5>Java-Script</h5>
+        <ul>
+          <li> Enter Java-Script notes here</li>
+        </ul>
         
       </section>
 
@@ -39,5 +56,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
