--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </section>
 
       <section class="card" id="css-section">
-        <h3>CSS</h3>
+        <h2>CSS</h2>
         <ul>
           <li>A margin indicates how much space we want around the outside of an element.
           </li>
@@ -35,7 +35,7 @@
       </section>
 
       <section class="card" id="git-section">
-        <h4>Git-Section</h4>
+        <h2>Git</h2>
         <ul>
           <li> git status: checks what branch we are currently on</li>
           <li> -b branch-name: creates a new branch and switches to it</li>
@@ -44,9 +44,12 @@
       </section>
 
       <section class="card" id="javascript-section">
-        <h5>Java-Script</h5>
+        <h2>Java-Script</h2>
         <ul>
-          <li> Enter Java-Script notes here</li>
+          <li>A variable(var) is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>JavaScript files are executed from top to bottom.</li>
+          <li>Defining a function does not mean it will execute automatically, to execute a function we must call it in our code.</li>
         </ul>
         
       </section>
